syntax = "proto3";

package greet;

option go_package="github.com/Kcih4518/grpc-golan/greet/proto";

message GreetRequeset {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet (GreetRequeset) returns (GreetResponse);
}

